First ready for simulations